Move assets to subfolder

--- a/example.html
+++ b/example.html
@@ -36,7 +36,7 @@ td.tx {
     padding: 0em;
     font-size: 20px;
     background: #FA5858;
-    background: url(tx.gif) center center no-repeat;
+    background: url('assets/tx.gif') center center no-repeat;
     border: 1px solid #DDD;
     text-align:center;
     vertical-align: middle;
@@ -50,7 +50,7 @@ th.logline {
 th.led {
     padding: 0em;
     font-size: .8em;
-    background: url(led.png) center right no-repeat;
+    background: url('assets/led.png') center right no-repeat;
     padding: 2px 6px;
     border-collapse: separate;
     border: 1px solid #000;
@@ -62,7 +62,7 @@ td.double {
     padding: 0em;
     font-size: 20px;
     background: #FA5858;
-    background: url(double.png) center center no-repeat;
+    background: url('assets/double.png') center center no-repeat;
     border: 1px solid #DDD;
     text-align:center;
     vertical-align: middle;
@@ -72,7 +72,7 @@ td.denied {
     padding: 0em;
     font-size: 20px;
     background: #FA5858;
-    background: url(accden.png) center center no-repeat;
+    background: url('assets/accden.png') center center no-repeat;
     border: 1px solid #DDD;
     text-align:center;
     vertical-align: middle;
@@ -83,7 +83,7 @@ td.ear {
     width: 0px;
     text-align: center;
     margin-left: 0px;
-    background: url(ear.png) center center no-repeat;
+    background: url('assets/ear.png') center center no-repeat;
     background-position: center;
     transition: all 0.6s ease-in;
 }
@@ -228,4 +228,4 @@ td.yellow {
 15.09.2017 19:58:15: ### DO0SE: Talker start
 15.09.2017 19:58:12: ### DL7ATA: Talker stop
 </pre></td></tr></table>
-<a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons Lizenzvertrag" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a><a style="font-size: 12px; text-decoration: none" rel="github" href="https://github.com/SkyAndy/svxrdb/">get your own v20170918.1807</a>
+<a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons Lizenzvertrag" style="border-width:0" src="assets/license.png" /></a><a style="font-size: 12px; text-decoration: none" rel="github" href="https://github.com/SkyAndy/svxrdb/">get your own v20170918.1807</a>
